# aniwrap-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  dev.compose.yml  pyproject.toml
.github/workflows/: check-version.yml  publish-image.yml
alembic/: env.py
alembic/versions/: 35af8f0b8d52_make_users_table.py
aniwrap/: app.py  config.py  dependencies.py  misc.py
aniwrap/api/: auth.py  watch_history.py  wrapped.py
aniwrap/db/: dependencies.py  models.py
aniwrap/service/: stats.py
aniwrap/service/auth/: anilist_auth.py
aniwrap/service/watch_history/: anilist.py
aniwrap/types/: dto.py
aniwrap/types/anilist/: watch_history.py
scripts/: entrypoint.sh
