[project]
name = "aniwrap"
version = "0.2.0"
description = "Backend server for AniWrap - cs-gang/AniWrap"
readme = "README.md"
authors = [
    { name = "anand2312", email = "40204976+anand2312@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "attrs>=25.3.0",
    "cattrs>=25.1.1",
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.115.13",
    "polars[pyarrow]>=1.31.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
module-name = "aniwrap"
module-root = ""

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
